04-vpcs/4.1.7/vpc.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: custom vpc 

Parameters: 
     VpcCidrBlock:
        Description: Cidr block
        Type: String
        Default: 10.16.0.0/16

Resources: 
#vpc
      DesireVPC:
          Type: AWS::EC2::VPC
          Properties:
            CidrBlock: !Ref VpcCidrBlock
            InstanceTenancy: default
            Tags:
            - Key: user
              Value: desire.bahbioh.labs
            - Key: stelligent-u-lesson
              Value: "4.1"
            - Key: stelligent-u-lab
              Value: "4.1.7"
      NatEIP:
          Type: AWS::EC2::EIP
          Properties: 
            Domain: vpc
            Tags:
            - Key: user
              Value: desire.bahbioh.labs
            - Key: stelligent-u-lesson
              Value: "4.1"
            - Key: stelligent-u-lab
              Value: "4.1.7"
#public subnet
      DSubnet01:
          Type: AWS::EC2::Subnet
          Properties:
            AvailabilityZone: "us-east-1a"
            VpcId: !Ref DesireVPC
            CidrBlock: 10.16.0.0/24
            Tags:
            - Key: user
              Value: desire.bahbioh.labs
            - Key: stelligent-u-lesson
              Value: "4.1"
            - Key: stelligent-u-lab
              Value: "4.1.7"
#private subnet
      DSubnet02:
          Type: AWS::EC2::Subnet
          Properties:
            AvailabilityZone: "us-east-1a"
            VpcId: !Ref DesireVPC
            CidrBlock: 10.16.1.0/24
            Tags:
            - Key: user
              Value: desire.bahbioh.labs
            - Key: stelligent-u-lesson
              Value: "4.1"
            - Key: stelligent-u-lab
              Value: "4.1.7"
#internet Gateway
      DesiIGW:
          Type: AWS::EC2::InternetGateway
          Properties:
            Tags:
            - Key: user
              Value: desire.bahbioh.labs
            - Key: stelligent-u-lesson
              Value: "4.1"
            - Key: stelligent-u-lab
              Value: "4.1.7"
#nat gateway
      DesiNatGW:
          Type: AWS::EC2::NatGateway
          Properties: 
            AllocationId: !GetAtt NatEIP.AllocationId
            SubnetId: !Ref DSubnet01
            Tags: 
            - Key: user
              Value: desire.bahbioh.labs
            - Key: stelligent-u-lesson
              Value: "4.1"
            - Key: stelligent-u-lab
              Value: "4.1.7"
#internet gateway attachement
      DesiIgwAttachement:
          Type: AWS::EC2::VPCGatewayAttachment
          Properties: 
            InternetGatewayId: !Ref DesiIGW
            VpcId: !Ref DesireVPC
#route table
      DesiRouteTable:
          Type: AWS::EC2::RouteTable
          Properties: 
            Tags: 
            - Key: user
              Value: desire.bahbioh.labs
            - Key: stelligent-u-lesson
              Value: "4.1"
            - Key: stelligent-u-lab
              Value: "4.1.7"
            VpcId: !Ref DesireVPC
      DesiRouteTable02:
          Type: AWS::EC2::RouteTable
          Properties: 
            Tags: 
            - Key: user
              Value: desire.bahbioh.labs
            - Key: stelligent-u-lesson
              Value: "4.1"
            - Key: stelligent-u-lab
              Value: "4.1.7"
            VpcId: !Ref DesireVPC
      
#subnet route table association(public subnet)
      DesiSbnRtTbAssoc:
          Type: AWS::EC2::SubnetRouteTableAssociation
          Properties: 
             RouteTableId: !Ref DesiRouteTable
             SubnetId: !Ref DSubnet01
#subnet route table association(private subnet)
      DesiPrivateSbnRtTbAssoc:
          Type: AWS::EC2::SubnetRouteTableAssociation
          Properties: 
             RouteTableId: !Ref DesiRouteTable02
             SubnetId: !Ref DSubnet02
#routes
     #internet gateway route
      DesiRoute:
          Type: AWS::EC2::Route
          Properties:
            GatewayId: !Ref DesiIGW
            RouteTableId: !Ref DesiRouteTable
            DestinationCidrBlock: 0.0.0.0/0
     #Nat route
      DesiNatRoute:
          Type: AWS::EC2::Route
          Properties:
            NatGatewayId: !Ref DesiNatGW
            RouteTableId: !Ref DesiRouteTable02
            DestinationCidrBlock: 0.0.0.0/0

Outputs:
      VPCid:
        Description: the VPC id 
        Value: !Ref DesireVPC
      PublicSubnetid:
        Description: public subnet id
        Value: !Ref DSubnet01
      PrivateSubnetid:
        Description: private subnet id
        Value: !Ref DSubnet02
